fix h1 and h2 sizes on mobile; fix alert padding

--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -178,7 +178,7 @@ h1, h2 {
   margin: 10px 0;
 
   @media (max-width: $mobile-media-breakpoint) {
-    font-size: $font-size-medium;
+    font-size: 22px;
   }
 
   &.underline {
